--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -511,6 +511,25 @@ span.close {
       margin: 2% 0; }
       .modal-editEvent-editform-timeInput input {
         font-size: 16px; }
+    .modal-editEvent-editform-locationInput {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+      width: 80%;
+      margin: 2% 0; }
+      .modal-editEvent-editform-locationInput input {
+        font-size: 16px; }
+    .modal-editEvent-editform-descInput {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+      width: 80%;
+      margin: 2% 0; }
+      .modal-editEvent-editform-descInput textarea {
+        font-size: 14px;
+        height: 60px; }
     .modal-editEvent-editform-buttongroup {
       margin: 0 auto; }
 
