--- a/assets/scss/modules/editEvent.scss
+++ b/assets/scss/modules/editEvent.scss
@@ -38,6 +38,31 @@
             }
         }
 
+        &-locationInput {
+            display: flex;
+            flex-flow: column nowrap;
+            width: 80%;
+            margin: 2% 0;
+            input {
+                font: {
+                    size: 16px;
+                }
+            }
+        }
+
+        &-descInput {
+            display: flex;
+            flex-flow: column nowrap;
+            width: 80%;
+            margin: 2% 0;
+            textarea {
+                font: {
+                    size: 14px;
+                }
+                height: 60px;
+            }
+        }
+
         &-buttongroup {
             margin: 0 auto;
         }
