--- a/assets/scss/modules/friends.scss
+++ b/assets/scss/modules/friends.scss
@@ -12,7 +12,7 @@
         &-sidebar {
             width: 30%;
             height: 500px;
-            margin: 2.5% 0 2.5% 0;
+            // margin: 2.5% 0 2.5% 0;
             overflow-y: auto;
             background-color: $grey;
             border-top-left-radius: 1em;
@@ -23,7 +23,7 @@
             flex-flow: column nowrap;
             width: 70%;
             max-height: 500px;
-            margin: 2.5% 0 2.5% 0;
+            // margin: 2.5% 0 2.5% 0;
             // padding: 2%;
             background-color: lightblue;
             border-top-right-radius: 1em;
