account create bug

--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -16,7 +16,7 @@
 	            <div class="modal-login-content-fieldgroup">
 	                <input type="text" placeholder="username" id="username">
 	                <input type="password" placeholder="Password" id="password">
-	                <input type="text" placeholder="email" id="email">
+	                <input type="email" placeholder="email" id="email">
 	            </div>
 	
 	            <div class="modal-login-content-buttongroup">
