fix new picture

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar-container sidebar-container-logo">
-	<a href="/"><img src="assets/img/scal.jpg" alt="scal" /></a>
+	<a href="/"><img src="assets/img/scal.png" alt="scal" /></a>
 </div>
 <div class="sidebar-container sidebar-container-user" ng-controller="loginCtrl">
 	<button class="sidebar-user" id="loginButton">
